# StellarBill

./: .gitignore  CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  LICENSE  README.md  ROADMAP.md
contracts/: Cargo.toml
contracts/invoice/: Cargo.toml
contracts/invoice/src/: lib.rs
docs/: api.md  contract-reference.md  deployment.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: CreateInvoiceForm.jsx  InvoiceCard.jsx  Layout.tsx  LineItemsTable.tsx  PayButton.tsx  QRCode.tsx  StatusBadge.tsx
frontend/src/lib/: stellar.ts
frontend/src/pages/: CreateInvoice.tsx  Dashboard.tsx  InvoiceDetail.tsx  PublicInvoice.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
lib/: helpers.js  helpers.ts  stellar.js
